--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Blue-Shark-Friends/shiver#readme",
   "dependencies": {
+    "prompt-sync": "^4.2.0",
     "yargs": "^17.7.2"
   }
 }
