--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Blue-Shark-Friends/shiver#readme",
   "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
     "prompt-sync": "^4.2.0",
     "yargs": "^17.7.2"
   }
